--- a/src/styles/pages/accueil.scss
+++ b/src/styles/pages/accueil.scss
@@ -1,3 +1,28 @@
-h1 {
-    color: $color-2;
-  }
+.container {
+    h1 {
+        color: $color-2;
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    form {
+        text-align: center;
+        margin-top: 15px;
+    }
+
+    input {
+        padding: 15px;
+        width: 550px;
+        outline: none;
+        border: 1px solid gray;
+        border-radius: 15px;
+    }
+    input::placeholder {
+        text-align: center;
+        font-size: 20px;
+    }
+
+    
+
+    
+}
