--- a/src/styles/pages/accueil.scss
+++ b/src/styles/pages/accueil.scss
@@ -22,6 +22,17 @@
         font-size: 20px;
     }
 
+    .recipe-container {
+        display: grid;
+        grid-template-columns:repeat(4, 1fr); 
+        grid-template-rows:repeat(5, 1fr); 
+        grid-gap: 12px 16px;
+        margin:12px;
+      }
+      
+      
+      
+
     
 
     
